--- a/todoclient/src/index.css
+++ b/todoclient/src/index.css
@@ -1,4 +1,20 @@
-:root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url(https://fonts.googleapis.com/css?family=League+Spartan:100,200,300,regular,500,600,700,800,900);
+
+html {
+	width: 100%;
+	height: 100%;
+}
+
+* {
+	font-family: 'League Spartan', sans-serif;
+	box-sizing: border-box;
+}
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +81,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
